--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
-Flask==0.12.2
+Babel==2.6.0
+click==6.7
+Flask==1.0.2
+Flask-Babel==0.11.2
+gunicorn==19.9.0
+itsdangerous==0.24
+Jinja2==2.10
+MarkupSafe==1.0
+pytz==2018.5
+Werkzeug==0.14.1
