--- a/log.cfg
+++ b/log.cfg
@@ -15,8 +15,9 @@ handlers=roll_1d_keep_1m
 class=handlers.TimedRotatingFileHandler
 level=INFO
 formatter=simple
-args=('log/errors.log', 'D', 1, 3)
+args=('/log/errors.log', 'D', 1, 15)
 
 [formatter_simple]
 format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
 datefmt=%d-%m-%Y %H:%M:%S
+class=logging.Formatter
